[package]
name = "prawn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
linux = ["dep:linux-personality"]


[dependencies]
affinity = "0.1.2"
anyhow = "1.0.75"
chrono = "0.4.31"
colored = "2.0.4"
crossbeam-channel = "0.5.8"
goblin = "0.9.3"
lazy_static = "1.4.0"
libc = "0.2.172"
linux-personality = { version = "2.0.0", optional = true }
log = "0.4.27"
memmap2 = "0.9.5"
raw-cpuid = "11.5.0"
rustyline = "12.0.0"
tempfile = "3.15.0"
thiserror = "1.0.49"
timer = "0.2.0"
tokio = { version = "1.43.0", features = ["full"] }
