[package]
name = "solve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
lazy_static = "1.5.0"
prawn = { version = "0.1.0", path = "../../" }
tokio = { version = "1.43.0", features = ["full"] }
tokio-macros = "~2.5.0"
